# rpi

./: .gitignore  Arduino-IDE.md  README.md  arduino-cli.md  bcm2835.md  circuits.md  install-debian  linking.md  logic-analyser.md  rc.fcd  riot.md  sn74hcxx.md  software.md  sofware.md
0clock/: README-3.md  README.md
1306/: README.md  fonts.md  pico1306.py  wroom.md
1306/pico-sdk/: .gdbinit  CMakeLists.txt  README.md  main.cc  oled.cc  oled.h
4/: README.md
8x8/: README.md
atlast/: atlast.c
attiny85/: .gitignore  Arduino-IDE.md  README.md  adc.md  clock85.md  digistump.md  gpio.c  gpio.h  gpio.md  interrupts.md  pwm.md  t85.mk  timer0.md  timer1.cc  timer1.h  uart1.cc  uart1.h
audio/: README.md
blinkt/: README.md
clockesp/: clockesp.py  reflash-bin
crunky/: .gitignore  Germ7.mk  Makefile  README.md  Settings.mk  arch.md  basal.c  basal.h  bcm2835.c  bcm2835.h  ctype.c  ctype.h  delays.c  delays.h  fat.c  fat.h  gpio.c  gpio.h  interrupts.c  interrupts.h  interrupts.md  lfb.c  lfb.h  linker.ld  malloc.md  mbox.c  memory.c  memory.h  mini_uart.c  mini_uart.h  nanolib-impl.c  qemu.md  qlaunch  sd.c  sd.h  sdcard-rpi.c  sdcard-rpi.h  snprintf.c  stdio.c  stdlib.c  (+14 more)
debounce/: README.md  debounce.cpp  debounce.h
dev03/: README.md
dev07/: README.md  blinkt.ino  dev07.ino  display.ino
dev08/: README.md  dev08.fcd  dev08eg.fcd
dev09/: README.md  dev09.ino  settime.py
esp-wroom/: README.md
esp8266/: README.md
fat32-x86/: .gdbinit  .gitignore  Makefile  README.md  can.cc  dir32.cc  mount-loopback  part32.cc  sdcard-x86.c  tree32.cc  type32.c  type32.cc
gps/: README.md
hertz/: README.md  hertz-t85
pico/: CMakeLists.txt  Makefile  README.md  baby.md  blinkt.cc  blinkt.h  boot.md  crc8-main.cc  crc8.cc  crc8.h  debounce.cc  debounce.h  dma.md  fat32.c  fat32.cc  fat32.h  gpio.md  install-debian  interrupts.txt  ledmat.cc  ledmat.h  mcp4921-dma.c  mcp4921-dma.cc  mcp4921-dma.h  mkdoc  notes.c  pace.c  pace.h  pi.c  pi.cc  pi.h  pico-pwm-audio-hard  picol.c  picol.h  picomc.cmake  pulse.cc  pulse.h  pwm-audio-hard-pico  pwm.md  rotary.cc  (+8 more)
pico/0TEMPLATE/: CMakeLists.txt  README.md  debug  main.cc
pico/38-i2c-master-rx/: README.md  main.cc
pico/39-rotary-encoder/: README.md  main.cc
pico/39-serial/: Makefile  README.md  main.cc
pico/39-serial/echo/: main.cc
pico/40-sedecim/: CMakeLists.txt  README.md  main.cc
pico/41-flash-from-sdcard/: .gdbinit  README.md  lorem.uue  main.cc
pico/41-flash-upload/: .gitignore  CMakeLists.txt  Makefile  README.md  lorem.txt  main.cc  ptx.cc  ptx.py
pico/41-uudecode/: .gdbinit  .gitignore  Makefile  README.md  lorem.txt  main.cc  ptx.cc  ptx.py  riff.cc
pico/42-flash-from-serial/: CMakeLists.txt  riff.cc  uutest.cc  wav10.cc
pico/42-spi-slave-rx/: README.md  main.cc
pico/43-spi-master-tx/: CMakeLists.txt  README.md  main.cc
pico/44-flash-from-serial/: CMakeLists.txt  README.md  main.cc  ptx.py
pico/45-dma-pwm-saw/: README.md  main.cc
pico/45-dma-pwm-saw-1/: CMakeLists.txt  README.md  main.cc
pico/46-dma-pwm-saw-2/: README.md  main.cc
pico/57-duty-cycle/: README.md  main.cc
pico/58-latch/: README.md  main.cc
pico/TEMPLATE/: main.cc
pico/abba/: .gdbinit  CMakeLists.txt  Makefile  README.md  abba-pico.cc  abba.cc  abba.h  mkdebug  test.bas  twice.bas
pico/abba/bak/: forth.h  tokens.h
pico/ada/01-blink/: Makefile  README.md  app.gpr  inst  main.adb
pico/ada/02-blink-task/: .gitignore  Makefile  README.md  alire.toml  app.gpr  main.adb
pico/adc/: .gdbinit  CMakeLists.txt  debug  main.cc
pico/atlast/: CMakeLists.txt  atlast.c
pico/bare-blink/: .gdbinit  .gitignore  Makefile  README.md  boot2.s  crt0.s  g.py  linker.ld  linker.ld.00  main.c  start-debug
pico/blinkt/: CMakeLists.txt  README.md  main.cc
pico/bytebeat/: CMakeLists.txt  README.md  debug  main.cc
pico/cplusplus/: CMakeLists.txt  README.md  main.cc
pico/dacish-saw/: README.md  main.cc
pico/debounce/: CMakeLists.txt  README.md  debounce.cc  main.cc
pico/debugc/: CMakeLists.txt  main.c
pico/dpc/: CMakeLists.txt  README.md  main.cc
pico/drum/: .gitignore  CMakeLists.txt  Electronic-Tom-1.raw  README.md  main.cc  mkdata
pico/drum/drum/: cd4017.lib  drum-cache.lib  drum.bak  drum.sch
pico/flash/: CMakeLists.txt  README.md  main.cc
pico/forth/: .gitignore  CMakeLists.txt  Makefile  abba-pico.cc  abba.h  dodebug  forth.c.0  forth.cpp  main.cc  newforth.cc  scanner.l  test.bas  tokens.h
pico/freq/: README.md  main.cc
pico/freq-440-pwm/: CMakeLists.txt  README.md  main.cc
pico/freq-adj/: CMakeLists.txt  README.md  main.cc
pico/freq-divider/: .gdbinit  CMakeLists.txt  README.md  main.cc  mkbuild
pico/gpio-irq/: CMakeLists.txt  README.md  main.cc
pico/kicad/: pico_rp2040.lib
pico/lab/chicken/: Makefile  README.md  blink.scm
pico/ledmat/: CMakeLists.txt  README.md  main.cc
pico/mcp4921-hard-song/: .gdbinit  CMakeLists.txt  mkdata
pico/mcp4921-sawtooth/: .gdbinit  README.md  main.cc
pico/mcp4921-sawtooth-dma/: CMakeLists.txt  README.md  main.cc
pico/mcp4921-sin440/: CMakeLists.txt  README.md  main.cc
pico/noise/: .gdbinit  CMakeLists.txt  README.md  main.cc
pico/notes/: CMakeLists.txt  README.md  main.cc
pico/picol/: CMakeLists.txt  README.md  main.c  picol.c
pico/random/: CMakeLists.txt  main.cc
pico/rcfilter/: CMakeLists.txt  README.md  main.cc
pico/rcfilter-1/: README.md  main.cc
pico/rcfilter-2/: .gdbinit  CMakeLists.txt  README.md  main.cc
pico/rotary/: README.md  main.cc
pico/scripts/: debug  ucalcs
pico/sdcard/: CMakeLists.txt  README.md  fat32.cc  fat32.h  main.c  main.cc  mk  sdcard.cc
pico/sine-benchmark/: CMakeLists.txt  main.cc  mktable  sine-table.cc
pico/sine440-pwm/: CMakeLists.txt  main.cc
pico/sine500-pwm/: CMakeLists.txt  main.cc
pico/ssd1306/: .gdbinit  CMakeLists.txt  README.md  main.c  main.cc  splash.c
pico/synth-1/: CMakeLists.txt  README.md  main.cc  synth-1.sch
pico/temperature/: CMakeLists.txt  README.md  main.cc  mkbuild
pico/timer_lowlevel/: CMakeLists.txt  main.cc  mk
pico/zeroseg/: CMakeLists.txt  README.md  main.cc
(+741 files in other folders)
